--- a/todo
+++ b/todo
@@ -1,4 +1,10 @@
 1. implement animations
+1.5. log debug level to file, all the time
 2. display username on screen
 	- check for same usernames
 3. handle server close on client
+
+feedback for trio:
+	- trio.open_memory_channel should maybe be boundable to a nursery or something
+
+how expensive is it to open a nursery in trio?
