WIP adding final scene

--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-- implement animations
+- fix animations rate (look at movement rates. It should be constant)
 - log debug level to file, all the time
 - display username on screen
 	- check for same usernames
