Something that runs. Somewhat

--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
+- fix application scene manager
 - fix animations rate (look at movement rates. It should be constant)
 - log debug level to file, all the time
 - display username on screen
